// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Jobs /> should render properly with data 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-62 {
  padding: 12px;
}

.emotion-50 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 16px;
}

.emotion-49 {
  border-spacing: 0;
}

.emotion-49 th {
  height: 32px;
  color: #b3b3b3;
  background-color: #2e2e2e;
  padding: 12px 16px;
  border-bottom: 1px solid #4d4948;
}

.emotion-49 th:not(:last-child) {
  border-right: 1px solid #4d4948;
}

.emotion-49 tr {
  background-color: #121212;
}

.emotion-49 tr:hover {
  background-color: #2e2e2e;
}

.emotion-49 tr:hover td {
  border: 1px solid #4d4948;
  border-left: 0px;
  border-right: 0px;
}

.emotion-49 tr:hover td:first-of-type {
  border: 1px solid #4d4948;
  border-right: 0px;
}

.emotion-49 tr:hover td:last-of-type {
  border: 1px solid #4d4948;
  border-left: 0px;
}

.emotion-49 td {
  height: 32px;
  color: #b3b3b3;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0px;
  border-right: 0px;
}

.emotion-49 td:first-of-type {
  border: 1px solid transparent;
  border-right: 0px;
}

.emotion-49 td:last-of-type {
  border: 1px solid transparent;
  border-left: 0px;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-14 {
  background-color: #121212;
}

.emotion-14:nth-of-type(2n) {
  background-color: #1d1d1d;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 200px;
}

.emotion-9 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #4ac565;
}

.emotion-9:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-9:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-10 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #ce2d3f;
}

.emotion-10:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-10:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-11 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #4a90e2;
}

.emotion-11:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-11:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-12 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #404040;
}

.emotion-12:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-12:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-24 {
  color: #4d4948;
}

.emotion-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a90e2;
}

.emotion-32 {
  color: #4a90e2;
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
}

.emotion-33 {
  padding-left: 8px;
}

.emotion-45 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #4ac565;
}

.emotion-45:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-45:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-61 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
<<<<<<< HEAD
  className="emotion-62"
=======
  className="emotion-51"
>>>>>>> clean up svg slightly; add updated snapshot
>
  <h2>
    Projects
  </h2>
  <ul>
    <li>
      project-name
    </li>
  </ul>
  <div
    className="emotion-50"
  >
    <table
      className="emotion-49"
    >
      <thead>
        <tr>
          <th>
            <div
              className="emotion-0"
            >
              Status
            </div>
          </th>
          <th>
            <div
              className="emotion-0"
            >
              Job Name
            </div>
          </th>
          <th>
            <div
              className="emotion-0"
            >
              Created By
            </div>
          </th>
          <th>
            <div
              className="emotion-0"
            >
              Priority
            </div>
          </th>
          <th>
            <div
              className="emotion-0"
            >
              Created (Date/Time)
            </div>
          </th>
          <th>
            <div
              className="emotion-0"
            >
              Failed
            </div>
          </th>
          <th>
            <div
              className="emotion-0"
            >
              Errors
            </div>
          </th>
          <th>
            <div
              className="emotion-0"
            >
              # Assets
            </div>
          </th>
          <th>
            <div
              className="emotion-0"
            >
              Progress
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-14"
        >
          <td>
            Active
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1573090716083
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-13"
            >
              <div
                className="emotion-9"
              />
              <div
                className="emotion-10"
              />
              <div
                className="emotion-11"
              />
              <div
                className="emotion-12"
              />
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Active
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1573090716083
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-13"
            >
              <div
                className="emotion-9"
              />
              <div
                className="emotion-10"
              />
              <div
                className="emotion-11"
              />
              <div
                className="emotion-12"
              />
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Paused
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1573090589586
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-13"
            >
              
              <div
                className="emotion-10"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Canceled
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1573090536003
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-24"
            >
              Canceled by: admin
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Finished
          </td>
          <td>
            test_officer
          </td>
          <td>
            zach@zorroa.com
          </td>
          <td>
            100
          </td>
          <td>
            1570828263275
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-13"
            >
              
              <div
                className="emotion-10"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Active
          </td>
          <td>
            test_officer
          </td>
          <td>
            zach@zorroa.com
          </td>
          <td>
            100
          </td>
          <td>
            1570827807692
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              3
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-13"
            >
              
              <div
                className="emotion-10"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Active
          </td>
          <td>
            flipbook_export_1
          </td>
          <td>
            admin
          </td>
          <td>
            1
          </td>
          <td>
            1564699939781
          </td>
          <td />
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              3
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-34"
            >
              <svg
                className="emotion-32"
                data-file-name="generating.svg"
              />
              <div
                className="emotion-33"
              >
                Generating
              </div>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Active
          </td>
          <td>
            export_7_8_2019
          </td>
          <td>
            admin
          </td>
          <td>
            1
          </td>
          <td>
            1562612024983
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td />
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-13"
            >
              
              <div
                className="emotion-10"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Active
          </td>
          <td>
            export_7_8_2019___
          </td>
          <td>
            admin
          </td>
          <td>
            1
          </td>
          <td>
            1562611383791
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td />
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-13"
            >
              
              <div
                className="emotion-10"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Active
          </td>
          <td>
            sdlc-testdata-import.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1562172555491
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td />
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-13"
            >
              
              <div
                className="emotion-10"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Active
          </td>
          <td>
            sdlc-testdata-import.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1562117381276
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              49
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-13"
            >
              <div
                className="emotion-45"
              />
              <div
                className="emotion-10"
              />
              
              
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <h2>
    UserMenu
  </h2>
  <div
    className="emotion-61"
  >
    <UserMenu
      logout={[Function]}
    />
  </div>
  <h2>
    Pagination
  </h2>
  <Pagination
    currentPage={1}
    legend="Jobs: 1–17 of 415"
    nextLink="/?page=2"
    onClick={[Function]}
    prevLink="/"
    totalPages={2}
  />
</div>
`;

exports[`<Jobs /> should render properly without data 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

<<<<<<< HEAD
.emotion-62 {
=======
.emotion-51 {
>>>>>>> clean up svg slightly; add updated snapshot
  padding: 12px;
}

.emotion-50 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 16px;
}

.emotion-49 {
  border-spacing: 0;
}

.emotion-49 th {
  height: 32px;
  color: #b3b3b3;
  background-color: #2e2e2e;
  padding: 12px 16px;
  border-bottom: 1px solid #4d4948;
}

.emotion-49 th:not(:last-child) {
  border-right: 1px solid #4d4948;
}

.emotion-49 tr {
  background-color: #121212;
}

.emotion-49 tr:hover {
  background-color: #2e2e2e;
}

.emotion-49 tr:hover td {
  border: 1px solid #4d4948;
  border-left: 0px;
  border-right: 0px;
}

.emotion-49 tr:hover td:first-of-type {
  border: 1px solid #4d4948;
  border-right: 0px;
}

.emotion-49 tr:hover td:last-of-type {
  border: 1px solid #4d4948;
  border-left: 0px;
}

.emotion-49 td {
  height: 32px;
  color: #b3b3b3;
  padding: 8px 16px;
  border: 1px solid transparent;
  border-left: 0px;
  border-right: 0px;
}

.emotion-49 td:first-of-type {
  border: 1px solid transparent;
  border-right: 0px;
}

.emotion-49 td:last-of-type {
  border: 1px solid transparent;
  border-left: 0px;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-14 {
  background-color: #121212;
}

.emotion-14:nth-of-type(2n) {
  background-color: #1d1d1d;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 16px;
  width: 200px;
}

.emotion-9 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #4ac565;
}

.emotion-9:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-9:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-10 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #ce2d3f;
}

.emotion-10:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-10:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-11 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #4a90e2;
}

.emotion-11:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-11:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-12 {
  height: 100%;
  -webkit-flex: 5 0 auto;
  -ms-flex: 5 0 auto;
  flex: 5 0 auto;
  background-color: #404040;
}

.emotion-12:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-12:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-24 {
  color: #4d4948;
}

.emotion-34 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #4a90e2;
}

.emotion-32 {
  color: #4a90e2;
  -webkit-animation: animation-0 2s linear infinite;
  animation: animation-0 2s linear infinite;
}

.emotion-33 {
  padding-left: 8px;
}

.emotion-45 {
  height: 100%;
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
  background-color: #4ac565;
}

.emotion-45:first-of-type {
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
}

.emotion-45:last-of-type {
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
}

.emotion-61 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

<div
<<<<<<< HEAD
  className="emotion-62"
=======
  className="emotion-51"
>>>>>>> clean up svg slightly; add updated snapshot
>
  <h2>
    Projects
  </h2>
  Loading...
  <div
    className="emotion-50"
  >
    <table
      className="emotion-49"
    >
      <thead>
        <tr>
          <th>
            <div
              className="emotion-0"
            >
              Status
            </div>
          </th>
          <th>
            <div
              className="emotion-0"
            >
              Job Name
            </div>
          </th>
          <th>
            <div
              className="emotion-0"
            >
              Created By
            </div>
          </th>
          <th>
            <div
              className="emotion-0"
            >
              Priority
            </div>
          </th>
          <th>
            <div
              className="emotion-0"
            >
              Created (Date/Time)
            </div>
          </th>
          <th>
            <div
              className="emotion-0"
            >
              Failed
            </div>
          </th>
          <th>
            <div
              className="emotion-0"
            >
              Errors
            </div>
          </th>
          <th>
            <div
              className="emotion-0"
            >
              # Assets
            </div>
          </th>
          <th>
            <div
              className="emotion-0"
            >
              Progress
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="emotion-14"
        >
          <td>
            Active
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1573090716083
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-13"
            >
              <div
                className="emotion-9"
              />
              <div
                className="emotion-10"
              />
              <div
                className="emotion-11"
              />
              <div
                className="emotion-12"
              />
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Active
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1573090716083
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-13"
            >
              <div
                className="emotion-9"
              />
              <div
                className="emotion-10"
              />
              <div
                className="emotion-11"
              />
              <div
                className="emotion-12"
              />
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Paused
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1573090589586
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-13"
            >
              
              <div
                className="emotion-10"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Canceled
          </td>
          <td>
            test-whitespace.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1573090536003
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-24"
            >
              Canceled by: admin
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Finished
          </td>
          <td>
            test_officer
          </td>
          <td>
            zach@zorroa.com
          </td>
          <td>
            100
          </td>
          <td>
            1570828263275
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              4
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-13"
            >
              
              <div
                className="emotion-10"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Active
          </td>
          <td>
            test_officer
          </td>
          <td>
            zach@zorroa.com
          </td>
          <td>
            100
          </td>
          <td>
            1570827807692
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              3
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-13"
            >
              
              <div
                className="emotion-10"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Active
          </td>
          <td>
            flipbook_export_1
          </td>
          <td>
            admin
          </td>
          <td>
            1
          </td>
          <td>
            1564699939781
          </td>
          <td />
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              3
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-34"
            >
              <svg
                className="emotion-32"
                data-file-name="generating.svg"
              />
              <div
                className="emotion-33"
              >
                Generating
              </div>
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Active
          </td>
          <td>
            export_7_8_2019
          </td>
          <td>
            admin
          </td>
          <td>
            1
          </td>
          <td>
            1562612024983
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td />
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-13"
            >
              
              <div
                className="emotion-10"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Active
          </td>
          <td>
            export_7_8_2019___
          </td>
          <td>
            admin
          </td>
          <td>
            1
          </td>
          <td>
            1562611383791
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td />
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-13"
            >
              
              <div
                className="emotion-10"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Active
          </td>
          <td>
            sdlc-testdata-import.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1562172555491
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td />
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-13"
            >
              
              <div
                className="emotion-10"
              />
              
              
            </div>
          </td>
        </tr>
        <tr
          className="emotion-14"
        >
          <td>
            Active
          </td>
          <td>
            sdlc-testdata-import.json
          </td>
          <td>
            admin
          </td>
          <td>
            100
          </td>
          <td>
            1562117381276
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              1
            </div>
          </td>
          <td>
            <div
              style={
                Object {
                  "color": "red",
                }
              }
            >
              49
            </div>
          </td>
          <td>
            numAsets
          </td>
          <td>
            <div
              className="emotion-13"
            >
              <div
                className="emotion-45"
              />
              <div
                className="emotion-10"
              />
              
              
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <h2>
    UserMenu
  </h2>
  <div
    className="emotion-61"
  >
    <UserMenu
      logout={[Function]}
    />
  </div>
  <h2>
    Pagination
  </h2>
  <Pagination
    currentPage={1}
    legend="Jobs: 1–17 of 415"
    nextLink="/?page=2"
    onClick={[Function]}
    prevLink="/"
    totalPages={2}
  />
</div>
`;
